syntax = "proto3";

option go_package = "/OrderManagement;OrderManagement";

service OrderManagement {
    rpc addOrder(Order) returns (OrderID);
    rpc getOrder(OrderID) returns (Order);
    rpc searchOrders(OrderID) returns (stream Order);
    // rpc updateOrders(stream Order) returns (StringValue);
    // rpc processOrders(stream StringValue) returns (stream CombinedShipment);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

// message CombinedShipment {
//     string id = 1;
//     string status = 2;
//     repeated Order ordersList = 3;
// }

message OrderID {
  // The string value.
  string message = 1;
}

  // The JSON representation for `StringValue` is JSON string.
  message StringValue {
    // The string value.
    string value = 1;
  }